# nailscpp

./: CMakeLists.txt  LICENSE  README.md  dataset_nails_split (1).xlsx  maniqure_data_updated.h  metadata_store.h  shared_repo.h
app/: CMakeLists.txt
app/bot/: main.cpp
benchmark/: CMakeLists.txt  photo_repository_benchmark.cpp  tg_bot_benchmark.cpp
data/: nails_corpus.txt
include/: globals.h
include/bot/: manicure_data.h  tg_bot.h
include/data/: dataset_loader.hpp
include/photo_repository/: metadata_store.h  personal_repo.h  photo.h  photo_repo.h  shared_repo.h
include/word2vec/: embedding.hpp
include/word2vec/core/: ITrainable.hpp  exceptions.hpp
include/word2vec/data/: dataset_loader.hpp  tokenizer.hpp  vocabulary.hpp
include/word2vec/embedding/: EmbeddingVector.hpp  embedding_vector.hpp
include/word2vec/model/: word2vec.hpp
include/word2vec/sampling/: NegativeSampler.hpp  negative_sampler.hpp
include/word2vec/search/: description_embedder.hpp  similarity_engine.hpp
src/: CMakeLists.txt  main.cpp
src/bot/: CMakeLists.txt  tg_bot.cpp
src/photo_repository/: metadata_store.cpp  personal_repo.cpp  photo.cpp  photo_repo.cpp  shared_repo.cpp
src/word2vec/: dataset_loader.cpp  description_embedder.cpp  embedding_vector.cpp  negative_sampler.cpp  similarity_engine.cpp  tokenizer.cpp  vocabulary.cpp  word2vec.cpp
tests/: CMakeLists.txt  photo_repository_sanity_test.cpp  photo_repository_smoke_test.cpp  smoke_test1.cpp  tg_bot_commands_test.cpp  tg_bot_repository_test.cpp  tg_bot_tests.cpp
